name:                fastchain
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/fastchain#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fastchain
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , aeson-quick
                     , base16-bytestring
                     , bytestring
                     , cryptonite
                     , containers
                     , http-conduit
                     , hslogger
                     , memory
                     , microlens
                     , microlens-platform
                     , postgresql-simple
                     , scotty
                     , text
                     , time
                     , transformers
  other-modules:       Database.Fastchain.Crypto
                       Database.Fastchain.Http
                       Database.Fastchain.Node
                       Database.Fastchain.Prelude
                       Database.Fastchain.Schema
                       Database.Fastchain.Types
  default-language:    Haskell2010

test-suite fchain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             TestMain.hs
  build-depends:       base
                     , aeson
                     , aeson-quick
                     , base16-bytestring
                     , bytestring
                     , cryptonite
                     , containers
                     , http-conduit
                     , hslogger
                     , memory
                     , microlens
                     , microlens-platform
                     , postgresql-simple
                     , scotty
                     , text
                     , time
                     , transformers
                     , tasty
                     , tasty-hunit
  ghc-options:         -O0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fchain
