name:                fastchain
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/fastchain#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fastchain
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-depends:       base
                     , aeson
                     , aeson-quick
                     , aeson-pretty
                     , base16-bytestring
                     , binary
                     , binary-orphans
                     , bytestring
                     , directory
                     , cryptonite
                     , containers
                     , http-conduit
                     , hslogger
                     , memory
                     , microlens
                     , microlens-platform
                     , optparse-applicative
                     , postgresql-simple
                     , scotty
                     , slave-thread
                     , text
                     , time
                     , transformers
                     , zeromq4-haskell
                     , ekg
  other-modules:       Database.Fastchain.Crypto
                       Database.Fastchain.Http
                       Database.Fastchain.Config
                       Database.Fastchain.Hub
                       Database.Fastchain.Backlog
                       Database.Fastchain.Logging
                       Database.Fastchain.Node
                       Database.Fastchain.Prelude
                       Database.Fastchain.Schema
                       Database.Fastchain.Types
                       Database.Fastchain.Zip
  default-language:    Haskell2010

test-suite testss
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             TestMain.hs
  build-depends:       base
                     , aeson
                     , aeson-quick
                     , aeson-pretty
                     , base16-bytestring
                     , binary
                     , binary-orphans
                     , bytestring
                     , cryptonite
                     , containers
                     , http-conduit
                     , hslogger
                     , memory
                     , microlens
                     , microlens-platform
                     , postgresql-simple
                     , slave-thread
                     , scotty
                     , text
                     , time
                     , transformers
                     , tasty
                     , tasty-hunit
  ghc-options:         -O0
  other-modules:       Database.Fastchain.Crypto
                       Database.Fastchain.Http
                       Database.Fastchain.Config
                       Database.Fastchain.Hub
                       Database.Fastchain.Backlog
                       Database.Fastchain.Logging
                       Database.Fastchain.Node
                       Database.Fastchain.Prelude
                       Database.Fastchain.Schema
                       Database.Fastchain.Zip
                       Database.Fastchain.Types
                       TestChainify
                       TestCommon
                       TestZip
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fchain
